changed a few images

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="bg-gradient-to-br from-purple-500 to-cyan-500 via-pink-500 w-full h-screen ">
         <div>
+
             <nav>
                 <div>
                     <h1 class="font-black text-5xl px-4 py-4 text-black">
@@ -42,10 +43,10 @@
 
             <div class="flex justify-end gap-x-6 relative items-baseline bottom-24">
                 <a href="#"
-                    class="px-6 py-2 text-lg border-solid rounded-3xl bg-purple-700 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-green-50 shadow-lg shadow-blue-500/50">Log
+                    class="px-6 py-2 text-lg border-solid rounded-3xl bg-purple-700 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-green-50 shadow-lg shadow-blue-500/50 ">Log
                     in</a>
                 <a href="#"
-                    class="px-6 py-2 text-lg border-solid rounded-3xl bg-purple-700 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-green-50 shadow-lg shadow-blue-500/50">Sign
+                    class="lg:px-6 py-2 text-lg border-solid rounded-3xl bg-purple-700 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-green-50 shadow-lg shadow-blue-500/50">Sign
                     up</a>
             </div>
             <header>
@@ -139,8 +140,8 @@
                     </div>
                     <div class="m-4 text-center">
                         <!-- cad title -->
-                        <span class="font-bold text-2xl">name</span>
-                        <p class="font-bold text-slate-500 text-xl mt-4 bg-zinc-200 p-1 rounded-lg">₦price</p>
+                        <span class="font-bold text-2xl">3in1 Chicken Burger</span>
+                        <p class="font-bold text-slate-500 text-xl mt-4 bg-zinc-200 p-1 rounded-lg">₦8500</p>
                     </div>
                     <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
                         <span>⌛25 mins</span>
@@ -178,8 +179,8 @@
                     </div>
                     <div class="m-4 text-center ">
                         <!-- cad title -->
-                        <span class="font-bold text-2xl">Stir-fry Spaghetti</span>
-                        <p class="font-bold text-slate-500 text-xl mt-4 bg-zinc-200 p-1 rounded-lg">₦3500</p>
+                        <span class="font-bold text-2xl">Jollof-rice & Chicken</span>
+                        <p class="font-bold text-slate-500 text-xl mt-4 bg-zinc-200 p-1 rounded-lg">₦3000</p>
                     </div>
                     <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
                         <span>⌛25 mins</span>
@@ -199,8 +200,8 @@
                     </div>
                     <div class="m-4 text-center ">
                         <!-- cad title -->
-                        <span class="font-bold text-2xl">Stir-fry Spaghetti</span>
-                        <p class="font-bold text-slate-500 text-xl mt-4 bg-zinc-200 p-1 rounded-lg">₦3500</p>
+                        <span class="font-bold text-2xl">Beef Burger,Fries & Soda </span>
+                        <p class="font-bold text-slate-500 text-xl mt-4 bg-zinc-200 p-1 rounded-lg">₦5000</p>
                     </div>
                     <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
                         <span>⌛25 mins</span>
@@ -220,8 +221,9 @@
                         </div>
                         <div class="m-4 text-center ">
                             <!-- cad title -->
-                            <span class="font-bold text-2xl">Stir-fry Spaghetti</span>
-                            <p class="font-bold text-slate-500 text-xl mt-4 bg-zinc-200 p-1 rounded-lg">₦3500</p>
+                            <span class="font-bold text-2xl">Pancakes</span>
+                            <p class="font-bold text-slate-500 text-xl mt-4 bg-zinc-200 p-1 rounded-lg">₦4000 ~ ₦10000
+                            </p>
                         </div>
                         <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
                             <span>⌛25 mins</span>
@@ -258,31 +260,41 @@
                     <div class="mb-5 ">
                         <h4 class="text-2xl pb-4">links</h4>
                         <ul class="text-gray-500">
-                            <li class="pb-4"><i class="fa fa-chevron-right text-yellow-500"></i> <a href="#"
-                                    class="hover:text-yellow-500">Home</a> </li>
-                            <li class="pb-4"><i class="fa fa-chevron-right text-yellow-500"></i><a href="#"
-                                    class="hover:text-yellow-500">About</a> </li>
-                            <li class="pb-4"><i class="fa fa-chevron-right text-yellow-500"></i><a href="#"
-                                    class="hover:text-yellow-500">Services</a> </li>
-                            <li class="pb-4"><i class="fa fa-chevron-right text-yellow-500"></i><a href="#"
-                                    class="hover:text-yellow-500">Terms of services</a> </li>
-                            <li class="pb-4"><i class="fa fa-chevron-right text-yellow-500"></i><a href="#"
-                                    class="hover:text-yellow-500">Privacy poliicy</a> </li>
+                            <li class="pb-4"><ion-icon name="chevron-forward-circle  class="
+                                    text-yellow-500"></ion-icon> <a href="#" class="hover:text-yellow-500">Home</a>
+                            </li>
+                            <li class="pb-4"><ion-icon name="chevron-forward-circle  class="
+                                    text-yellow-500"></ion-icon><a href="#" class="hover:text-yellow-500">About</a>
+                            </li>
+                            <li class="pb-4"><ion-icon name="chevron-forward-circle  class="
+                                    text-yellow-500"></ion-icon><a href="#" class="hover:text-yellow-500">Services</a>
+                            </li>
+                            <li class="pb-4"><ion-icon name="chevron-forward-circle  class="
+                                    text-yellow-500"></ion-icon><a href="#" class="hover:text-yellow-500">Terms
+                                    of services</a> </li>
+                            <li class="pb-4"><ion-icon name="chevron-forward-circle  class="
+                                    text-yellow-500"></ion-icon><a href="#" class="hover:text-yellow-500">Privacy
+                                    poliicy</a> </li>
                         </ul>
                     </div>
                     <div class="mb-5 ">
                         <h4 class="text-2xl pb-4">Our Services</h4>
                         <ul class="text-gray-500">
-                            <li class="pb-4"><i class="fa fa-chevron-right text-yellow-500"></i><a href="#"
-                                    class="hover:text-yellow-500"> Lorem, ipsum dolor.</a></li>
-                            <li class="pb-4"><i class="fa fa-chevron-right text-yellow-500"></i><a href="#"
-                                    class="hover:text-yellow-500">Lorem, ipsum dolor.</a> </li>
-                            <li class="pb-4"><i class="fa fa-chevron-right text-yellow-500"></i><a href="#"
-                                    class="hover:text-yellow-500"> Lorem, ipsum dolor.</a></li>
-                            <li class="pb-4"><i class="fa fa-chevron-right text-yellow-500"></i><a href="#"
-                                    class="hover:text-yellow-500"> Lorem, ipsum dolor.</a></li>
-                            <li class="pb-4"><i class="fa fa-chevron-right text-yellow-500"></i><a href="#"
-                                    class="hover:text-yellow-500"> Lorem, ipsum dolor.</a></li>
+                            <li class="pb-4"><ion-icon name="chevron-forward-circle"
+                                    class="text-yellow-500"></ion-icon><a href="#" class="hover:text-yellow-500">
+                                    Lorem, ipsum dolor.</a></li>
+                            <li class="pb-4"><ion-icon name="chevron-forward-circle"
+                                    class="text-yellow-500"></ion-icon><a href="#" class="hover:text-yellow-500">Lorem,
+                                    ipsum dolor.</a> </li>
+                            <li class="pb-4"><ion-icon name="chevron-forward-circle"
+                                    class="text-yellow-500"></ion-icon><a href="#" class="hover:text-yellow-500">
+                                    Lorem, ipsum dolor.</a></li>
+                            <li class="pb-4"><ion-icon name="chevron-forward-circle"
+                                    class="text-yellow-500"></ion-icon><a href="#" class="hover:text-yellow-500">
+                                    Lorem, ipsum dolor.</a></li>
+                            <li class="pb-4"><ion-icon name="chevron-forward-circle"
+                                    class="text-yellow-500"></ion-icon><a href="#" class="hover:text-yellow-500">
+                                    Lorem, ipsum dolor.</a></li>
                         </ul>
                     </div>
                     <div class="mb-5 ">
@@ -297,22 +309,22 @@
                             <button class="p-2 w-1/3 bg-yellow-500 text-white hover:bg-yellow-600 ">Subscribe</button>
                         </form>
 
-                        <div class="mt-8 text-center">
+                        <div class="mt-8 text-center ">
                             <a href="#"
-                                class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i
-                                    class="fa fa-twitter"></i></a>
+                                class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><ion-icon
+                                    name="logo-facebook"></ion-icon></a>
                             <a href="#"
-                                class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i
-                                    class="fa fa-instagram"></i></a>
+                                class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><ion-icon
+                                    name="logo-instagram"></ion-icon></a>
                             <a href="#"
-                                class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i
-                                    class="fa fa-facebook"></i></a>
+                                class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><ion-icon
+                                    name="logo-twitter"></ion-icon></a>
                             <a href="#"
-                                class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i
-                                    class="fa fa-skype"></i></a>
+                                class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><ion-icon
+                                    name="logo-skype"></ion-icon></a>
                             <a href="#"
-                                class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i
-                                    class="fa fa-linkedln"></i></a>
+                                class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><ion-icon
+                                    name="logo-linkedin"></ion-icon></a>
                         </div>
                     </div>
 
@@ -327,6 +339,8 @@
 
 
 
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
