Fixed button overlap for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,13 @@
 
             <nav>
                 <div>
-                    <h1 class="font-black text-3xl md:text-3xl lg:text-5xl px-4 py-4 text-black ">
-                        <a href=" #" class="shadow-2xl shadow-blue-500/50 hover:text-white">FoodGasm</a>
+                    <h1
+                        class="font-black text-3xl md:text-3xl lg:text-5xl px-0 py-0 md:px-4 md:py-4 lg:py-4 lg:px-4 text-black ">
+                        <a href="#" class="shadow-2xl shadow-blue-500/50 hover:text-white">FoodGasm</a>
                     </h1>
                 </div>
                 <ul
-                    class=" mt-2 md:flex md:flex-row md:gap-x-10 md:justify-center md:items-center md:flex-wrap md:relative md:bottom-14 ">
+                    class=" mt-2 md:flex md:flex-row md:gap-x-10 md:justify-center md:items-center md:flex-wrap md:relative md:bottom-14">
                     <li>
                         <a href="#HOME">
                             <span
@@ -56,7 +57,7 @@
                     up</a>
             </div>
             <header>
-                <div class="container block lg:columns-2 mt-20 ">
+                <div class="container block md:columns-1 lg:columns-2 mt8 sm:mt-6 md:mt-16 lg:mt-20 ">
                     <div class="mt-20">
                         <h2
                             class="text-black font-black text-4xl md:text-5xl lg:text-6xl text-center font-serif italic  ">
@@ -67,14 +68,15 @@
                         <h3 class="font-medium text-2xl mt-5 text-center my-4 font-serif text-slate-100 italic">We
                             serve
                             you the
-                            best meals <br>with high quality at affordable prices</h3>
+                            best meals with high quality at affordable prices</h3>
                     </div>
 
-                    <div class="bg-cover">
-                        <img src="img/kitchen1.jpg" alt="" class="w-full h-full object-cover">
+                    <div class="bg-cover  ">
+                        <img src="img/kitchen1.jpg" alt=""
+                            class=" w-full   md:h-full md:w-full h-52 lg:w-full lg:h-full object-cover ">
                     </div>
                 </div>
-                <div class=" mt-6 md:mt-6 lg:mt-6 text-center md:text-center lg:text-left lg:ml-28 lg:gap-x-20 ">
+                <div class=" mt-6  mb-6 md:mt-6 lg:mt-6 text-center md:text-center lg:text-left lg:ml-28 sm:mt-6 ">
                     <button type="button"
                         class="px-6 py-2 text-lg border-solid rounded-3xl bg-purple-700 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-neutral-50 shadow-lg shadow-blue-500/50 ">Order
                         now ➡️</button>
@@ -87,8 +89,8 @@
         </main>
     </div>
 
-    <div class="bg-gray-200" id="MENU">
-        <h4 class="font-bold mt-4 mb-6 pb-2 border-b border-gray-100 text-2xl"> Latest Recipes</h4>
+    <div class="bg-gray-200 mt-4 mb-6" id="MENU">
+        <h4 class="font-bold pt-4 pb-2 border-b border-gray-100 text-2xl"> Latest Recipes</h4>
 
         <div class="mt-8 grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 mx-4">
             <!-- cards go here -->
@@ -103,9 +105,9 @@
                     </div>
                     <div class="m-4 text-center ">
                         <!-- cad title -->
-                        <span class="font-bold text-2xl">Stir-fry Spaghetti</span>
+                        <p class="font-bold text-2xl">Stir-fry Spaghetti</p>
                         <p class="font-bold text-slate-500 text-3xl mt-4 bg-zinc-200 p-1 rounded-lg"> <ion-icon
-                                name="logo-usd" class="text-3xl"></ion-icon>20</p>
+                                name="logo-usd" class="text-2xl"></ion-icon>20</p>
                     </div>
                     <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
                         <span>⌛25 mins</span>
@@ -125,7 +127,7 @@
                         <!-- cad title -->
                         <p class="font-bold text-2xl">Chicken Shawarma</p>
                         <p class="font-bold text-slate-500 text-3xl mt-4 bg-zinc-200 p-1 rounded-lg"> <ion-icon
-                                name="logo-usd" class="text-3xl"></ion-icon>15</p>
+                                name="logo-usd" class="text-2xl"></ion-icon>15</p>
 
                     </div>
                     <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
@@ -145,9 +147,9 @@
                     </div>
                     <div class="m-4 text-center">
                         <!-- cad title -->
-                        <span class="font-bold text-2xl">3-in-1 Chicken Burger</span>
+                        <p class="font-bold text-2xl">3-in-1 Chicken Burger</p>
                         <p class="font-bold text-slate-500 text-3xl mt-4 bg-zinc-200 p-1 rounded-lg"> <ion-icon
-                                name="logo-usd" class="text-3xl"></ion-icon>28</p>
+                                name="logo-usd" class="text-2xl"></ion-icon>28</p>
                     </div>
                     <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
                         <span>⌛30 mins</span>
@@ -169,7 +171,7 @@
     <!-- most popular -->
     <div class="bg-gray-200 mt-4">
 
-        <h4 class="font-bold mt-4 mb-6 pb-2 border-b border-gray-100 text-2xl"> Latest Recipes</h4>
+        <h4 class="font-bold mt-4 mb-6 pb-2 border-b border-gray-100 text-2xl"> Most Popular</h4>
 
         <div class="mt-8 grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 mx-4">
 
@@ -185,9 +187,9 @@
                     </div>
                     <div class="m-4 text-center ">
                         <!-- cad title -->
-                        <span class="font-bold text-2xl">Jollof-rice & Chicken</span>
+                        <p class="font-bold text-2xl">Jollof-rice & Chicken</p>
                         <p class="font-bold text-slate-500 text-3xl mt-4 bg-zinc-200 p-1 rounded-lg"> <ion-icon
-                                name="logo-usd" class="text-3xl"></ion-icon>20</p>
+                                name="logo-usd" class="text-2xl"></ion-icon>20</p>
                     </div>
                     <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
                         <span>⌛30 mins</span>
@@ -207,9 +209,9 @@
                     </div>
                     <div class="m-4 text-center ">
                         <!-- cad title -->
-                        <span class="font-bold text-2xl">Beef Burger,Fries & Soda </span>
+                        <p class="font-bold text-2xl">Beef Burger,Fries & Soda </p>
                         <p class="font-bold text-slate-500 text-3xl mt-4 bg-zinc-200 p-1 rounded-lg">
-                            <ion-icon name="logo-usd" class="text-3xl"></ion-icon>30
+                            <ion-icon name="logo-usd" class="text-2xl"></ion-icon>30
                         </p>
                     </div>
                     <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
@@ -230,9 +232,9 @@
                         </div>
                         <div class="m-4 text-center ">
                             <!-- cad title -->
-                            <span class="font-bold text-2xl">Pancakes</span>
+                            <p class="font-bold text-2xl">Pancakes</p>
                             <p class="font-bold text-slate-500 text-3xl mt-4 bg-zinc-200 p-1 rounded-lg"> <ion-icon
-                                    name="logo-usd" class="text-3xl"></ion-icon>25
+                                    name="logo-usd" class="text-2xl"></ion-icon>25
                             </p>
                         </div>
                         <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
